fix: fluxo de debito e credito de valores em dolar e real
